--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,17 @@
 {
-	"presets":["es2015","latest"],
-	"plugins":[]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
+    "@babel/preset-react"
+  ],
+    "plugins": ["@babel/plugin-transform-runtime"],
+    "env": {
+      "test": {
+        "presets": ["@babel/preset-env", "@babel/preset-react"]
+      }
+    }
 }
